--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>HolakakaCV</title>
+    <title>NgocKhangCV</title>
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="../src/css/default.css" />
